# vba_interpreter

./: .gitignore  Cargo.toml  TODO.md  build.rs  readme.md  test
grammars/: vba.g4
src/: gen.rs  main.rs  runtime.rs  static_checker.rs
test/: point.cls  test1.bas  test2.cls
vba-interpreter-lib/: Cargo.toml  build.rs
vba-interpreter-lib/src/: gen.rs  lib.rs  runtime.rs  static_checker.rs
vba-interpreter-lib/test/: test1.bas
vba-interpreter-wasm/: Cargo.toml  package-lock.json
vba-interpreter-wasm/js/: counter.js
vba-interpreter-wasm/src/: counter_state.rs  lib.rs
