[package]
name = "vba-interpreter-lib"
version = "0.1.0"
edition = "2021"
exclude = ["/build.rs","/grammars","/templates"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "=0.2"
# gag = "1.0.0"
# cli-table = "0.4"

[profile.dev]
overflow-checks = false
